--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
     "nodemon": "^3.0.3",
+    "prisma-dbml-generator": "^0.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
