--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "prisma": "^5.9.1"
   },
   "devDependencies": {
